--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <div id="register-view">
+    <div id="register-view" class="view">
         <h1>Register</h1>
 
-        <form>
+        <form class="form">
             <label for="name-input">Name</label>
             <input id="name-input" type="text">
 
@@ -24,44 +24,45 @@
             <label for="password-input">Password</label>
             <input id="password-input" type="password">
 
-            <button>Register</button>
+            <button type="submit">Register</button>
         </form>
 
         <a href="">Login</a>
     </div>
 
-    <div id="login-view">
+    <div id="login-view" class="view">
         <h1>Login</h1>
 
-        <form>
+        <form class="form">
             <label for="email-input">E-mail</label>
             <input id="email-input" type="email">
 
             <label for="password-input">Password</label>
             <input id="password-input" type="password">
 
-            <button>Login</button>
+            <button type="submit">Login</button>
         </form>
 
         <a href="">Register</a>
     </div>
 
     <div id="home-view">
-
         <header class="home-header">
             <h1><a href="" id="home-link">Home</a></h1>
 
             <div>
+                <button id="new-post-button">+</button>
+
                 <a href="" class="profile-link" id="profile-link">Profile</a>
+
                 <button id="logout-button">Logout</button>
             </div>
         </header>
 
-        <div id="profile-view">
-
+        <div id="profile-view" class="view">
             <h2>Update e-mail</h2>
 
-            <form id="change-email-form">
+            <form id="change-email-form" class="form">
                 <label for="new-email-input">New e-mail</label>
                 <input id="new-email-input" type="email">
 
@@ -71,12 +72,12 @@
                 <label for="password-input">Password</label>
                 <input id="password-input" type="password">
 
-                <button>Update e-mail</button>
+                <button type="submit">Update e-mail</button>
             </form>
 
             <h2>Update password</h2>
 
-            <form id="change-password-form">
+            <form id="change-password-form" class="form">
                 <label for="password-input">Current password</label>
                 <input id="password-input" type="password">
 
@@ -86,11 +87,29 @@
                 <label for="new-password-confirm-input">Confirm new password</label>
                 <input id="new-password-confirm-input" type="password">
 
-                <button>Update password</button>
+                <button type="submit">Update password</button>
+            </form>
+        </div>
+        <div id="new-post-view" class="view">
+            <h2>New post</h2>
+
+            <form id="new-post-form" class="form">
+                <label for="image-input">Image</label>
+                <input type="url" id="image-input">
+
+                <label for="text-input">Text</label>
+                <input type="text" id="text-input">
+
+                <button type="submit">Post</button>
+                <button id="cancel-new-post-button">Cancel</button>
             </form>
         </div>
 
+        <div id="posts-view">
+        </div>
     </div>
+
+    <script src="polyfills.js"></script>
 
     <script src="data.js"></script>
 
