--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
-
+    <link rel="shortcut icon" href="https://www.b00tc4mp.com/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -116,10 +115,10 @@
     <script src="validators.js"></script>
     <script src="logic.js"></script>
 
-    <script src="main.js"></script>
     <script src="views/login.js"></script>
     <script src="views/register.js"></script>
     <script src="views/home.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
